# my-vk-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/: language.lua
assets/models/: city.mtl  cube.mtl  ganyu.mtl  miniature_night_city.glb  pjanic.mtl
assets/scene/: main.js  scene.lua
assets/scene/demo/: init.lua  physic_demo.lua  static_scene.lua
assets/script/: scene.lua
assets/shaders/: composition.frag  composition.vert  mrt.frag  mrt.vert  particle.comp  particle.slang  simple_triangle.frag  simple_triangle.vert  util.glsl
assets/textures/: TexturesCom_Pavement_AsphaltOld_1K_ao.tif  TexturesCom_Pavement_AsphaltOld_1K_height.tif  TexturesCom_Pavement_AsphaltOld_1K_roughness.tif
libs/: CMakeLists.txt
libs/cmake/: FindV8.cmake
libs/sdl2/: FindSDL2.cmake
src/: CMakeLists.txt  main.cpp
src/actors/: actor.cpp  actor.hpp  actor.tpp
src/actors/object/: empty.cpp  empty.hpp  point_light.cpp  point_light.hpp  static.cpp  static.hpp
src/actors/player/: camera.cpp  camera.hpp
src/components/: component.cpp  component.hpp
src/components/anim/: animation.hpp  tween.cpp  tween.hpp
src/components/control/: move.cpp  move.hpp
src/components/graphic/: mesh.cpp  mesh.hpp  particle.cpp  particle.hpp
src/components/physic/: rigidbody.cpp  rigidbody.hpp
src/components/utils/: loader.cpp  loader.hpp
src/core/: camera.hpp  creation_helper.hpp  custom_type.hpp  engine.cpp  engine.hpp  input_system.cpp  input_system.hpp
src/core/input/: input_system.cpp  input_system.hpp
src/core/physic/: def.hpp  physic.cpp  physic.hpp
src/core/renderer/: builder.cpp  builder.hpp  creation_helper.hpp  def.hpp  renderer.cpp  renderer.hpp
src/core/scripting/: lua.cpp  lua.hpp
src/engine/: camera.hpp  creation_helper.cpp  creation_helper.hpp  custom_type.hpp  engine.cpp  engine.hpp  lib_impl.cpp  utils.h
src/renderer/: builder.cpp  builder.hpp  creation_helper.hpp  def.hpp  renderer.cpp  renderer.hpp
src/tests/: cameraTest.cpp  math_test.cpp  script_lifetime_test.cpp
src/utils/: algo.hpp  common.hpp  lib_impl.cpp  log.cpp  log.hpp
